--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -829,6 +829,12 @@ main {
   line-height: 1.6;
 }
 
+.timeline-text-new {
+  color: var(--light-gray);
+  font-weight: var(--fw-300);
+  line-height: 1.6;
+  font-weight: bold;
+}
 
 /**
  * skills 
@@ -1636,7 +1642,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .form-btn {
     width: max-content;
-    margin-left: auto;
+    /* margin-left: auto; */
   }
   
 }
@@ -1796,7 +1802,34 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   article { min-height: 100%; }
 
+.line-1 {
+    position: relative;
+    top: 50%;  
+    width: 24em;
+    margin: 0 auto;
+    border-right: 2px solid rgba(255,255,255,.75);
+    font-size: 180%;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    transform: translateY(-50%);    
+}
 
+/* Animation */
+.anim-typewriter {
+  color:hsl(0, 0%, 100%);
+  /* margin-left: 0px; */
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+             blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 24em;}
+}
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: transparent;}
+}
 
   /**
    * MAIN
